Fix search bar spacing

--- a/frontend/src/css/components/dream.scss
+++ b/frontend/src/css/components/dream.scss
@@ -262,7 +262,7 @@
 
             .tag-search-results-wrapper {
                 top: 40px;
-                left: 60px;
+                left: 50px;
             }
         }
     }
